NIFI-15101 Aligned those processors and controller services whose property names do not match the human-friendly display names in extended bundles nifi-jms-bundle, nifi-jolt-bundle, nifi-jslt-bundle, and nifi-kafka-bundle.